@@ -19,8 +19,8 @@ setup_requires = []
 install_requires = [
     "requests>=2.22.0,<3.0",
     "urllib3>=1.25.10",
-    "tomli; python_version < '3.11'",
-    "tomli-w",
+    "pyyaml",
+    "types-PyYAML",
     "typing_extensions; python_version < '3.8'",
 ]
 
@@ -33,6 +33,9 @@ tests_require = [
     "flake8",
     "types-requests",
     "mypy",
+    # for check of different parsers in recorder
+    "tomli; python_version < '3.11'",
+    "tomli-w",
 ]
 
 if "test" in sys.argv:
